Add new way for test